tgthrProgramManagement/force-app/main/default/objects/GoalAssignment/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Goal Assignments</relationshipLabel>
    <relationshipName>Goal_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>