tgthrProgramManagement/force-app/main/default/objects/GoalAssignment/fields/CurrentProgress__c.field-meta.xml
<CustomField>
    <fullName>CurrentProgress__c</fullName>
    <label>Current Progress</label>
    <description>Current progress toward goal completion (0-100%). Updated automatically when GoalAssignmentDetail records are created.</description>
    <inlineHelpText>Progress percentage (0-100) toward completing this goal.</inlineHelpText>
    <type>Percent</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>