tgthrProgramManagement/force-app/main/default/objects/GoalAssignment/fields/Goal_Name__c.field-meta.xml
<CustomField>
    <fullName>Goal_Name__c</fullName>
    <label>Goal Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Display name of the goal. Used in BillingExportController to populate goal descriptions on the billing claim.</description>
</CustomField>