tgthrProgramManagement/force-app/main/default/objects/GoalAssignment/fields/LastWorkedOnDate__c.field-meta.xml
<CustomField>
    <fullName>LastWorkedOnDate__c</fullName>
    <label>Last Worked On Date</label>
    <description>Date when this goal was last addressed in an interaction. Updated automatically when GoalAssignmentDetail records are created.</description>
    <inlineHelpText>The most recent date this goal was worked on during an interaction.</inlineHelpText>
    <type>Date</type>
</CustomField>