tgthrProgramManagement/force-app/main/default/objects/GoalAssignment/fields/Service_Modality__c.field-meta.xml
<CustomField>
    <fullName>Service_Modality__c</fullName>
    <label>Service Modality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical</fullName>
                <default>true</default>
                <label>Clinical</label>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Peer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>