tgthrProgramManagement/force-app/main/default/objects/GoalAssignment/fields/TotalSessions__c.field-meta.xml
<CustomField>
    <fullName>TotalSessions__c</fullName>
    <label>Total Sessions</label>
    <description>Count of interactions where this goal was addressed. Incremented automatically when GoalAssignmentDetail records are created.</description>
    <inlineHelpText>Number of sessions/interactions where this goal was worked on.</inlineHelpText>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>